crates/weaver-renderer/src/atproto/snapshots/weaver_renderer__atproto__tests__table_rendering.snap
---
source: crates/weaver-renderer/src/atproto/tests.rs
expression: output
---
<table><thead><tr><th style="text-align: left">Left</th><th style="text-align: center">Center</th><th style="text-align: right">Right</th></tr></thead><tbody>
<tr><td style="text-align: left">A</td><td style="text-align: center">B</td><td style="text-align: right">C</td></tr>
</tbody></table>
