crates/weaver-renderer/src/atproto/snapshots/weaver_renderer__atproto__tests__weaver_block_aside_class.snap
---
source: crates/weaver-renderer/src/atproto/tests.rs
expression: output
---
<aside>
<p dir="ltr">This paragraph should be in an aside.</p>
</aside>
