crates/weaver-renderer/src/atproto/snapshots/weaver_renderer__atproto__tests__weaver_block_before_blockquote.snap
---
source: crates/weaver-renderer/src/atproto/tests.rs
expression: output
---
<aside>
<blockquote>
<p>This blockquote is in an aside.</p>
</aside>
</blockquote>
