crates/weaver-renderer/src/atproto/snapshots/weaver_renderer__atproto__tests__weaver_block_before_heading.snap
---
source: crates/weaver-renderer/src/atproto/tests.rs
expression: output
---
<aside>
<h2>Heading in aside</h2>
<p dir="ltr">Paragraph also in aside.</p>
</aside>
