crates/weaver-renderer/src/atproto/snapshots/weaver_renderer__atproto__tests__weaver_block_before_list.snap
---
source: crates/weaver-renderer/src/atproto/tests.rs
expression: output
---
<aside>
<ul>
<li>Item 1</li>
<li>Item 2</li>
</ul>
</aside>
