crates/weaver-renderer/src/atproto/snapshots/weaver_renderer__atproto__tests__weaver_block_custom_attributes.snap
---
source: crates/weaver-renderer/src/atproto/tests.rs
expression: output
---
<div class="foo" width="300px" data-test="value">
<p dir="ltr">Paragraph with class and attributes.</p>
</div>
