crates/weaver-renderer/src/atproto/snapshots/weaver_renderer__atproto__tests__weaver_block_custom_class.snap
---
source: crates/weaver-renderer/src/atproto/tests.rs
expression: output
---
<div class="highlight">
<p>This paragraph has a custom class.</p>
</div>
