crates/weaver-renderer/src/atproto/snapshots/weaver_renderer__atproto__tests__weaver_block_multiple_classes.snap
---
source: crates/weaver-renderer/src/atproto/tests.rs
expression: output
---
<aside class="highlight important">
<p>Multiple classes applied.</p>
</aside>
