crates/weaver-renderer/src/atproto/snapshots/weaver_renderer__atproto__tests__weaver_block_no_effect_on_following.snap
---
source: crates/weaver-renderer/src/atproto/tests.rs
expression: output
---
<aside>
<p>First paragraph in aside.</p>
</aside>
<p>Second paragraph NOT in aside.</p>
