crates/weaver-renderer/src/atproto/snapshots/weaver_renderer__atproto__tests__weaver_block_with_footnote.snap
---
source: crates/weaver-renderer/src/atproto/tests.rs
expression: output
---
<aside>
<p dir="ltr">Aside with a footnote<label for="sn-1" class="sidenote-number"></label><input type="checkbox" id="sn-1" class="margin-toggle"/><span class="sidenote">Footnote in aside context.</span>.</p>
</aside>
